more improvements